# Tribunus-Compute

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  PORTED_COMPONENTS.md  PORTED_COMPONENTS_FULL.md  README.md  Tribunus.entitlements  xcodegen.yml
.cargo/: config.toml
compute-native/: Cargo.toml  Cargo.toml.backup  STATUS.md  build.rs  index.d.ts  index.js
compute-native/compute-core/: Cargo.toml  build.rs
compute-native/compute-core/src/: arena.rs  attention.rs  candle_cpu_backend.rs  compute_image.rs  config.rs  coreml_bridge.rs  coreml_pipeline.rs  coreml_state.rs  crash_breadcrumb.rs  editing.rs  engine.rs  engine_receipts.rs  executor.rs  executor_projection.rs  exo.rs  external_array.rs  gguf.rs  grammar.rs  heterogeneous.rs  hybrid_profile.rs  kv_cache.rs  lib.rs  logging.rs  lora.rs  mapped_image.rs  metal_launcher.rs  mil_builder.rs  mlpackage.rs  model.rs  model_cache.rs  model_runtime.rs  operation_catalog.rs  plugin.rs  primitives.rs  profiled_executor.rs  profiled_model.rs  projection_executor.rs  projection_identity.rs  quantized.rs  readiness_gates.rs  (+15 more)
compute-native/compute-core/src/ane/: draft_model.rs  hot_row_predictor.rs  mod.rs  moe_scheduler.rs  sink_detector.rs  weight_row_cache.rs
compute-native/compute-core/src/audio/: encoder.rs  mod.rs  preprocess.rs
compute-native/compute-core/src/autopsy/: mod.rs  patch.rs  tracer.rs
compute-native/compute-core/src/backend/: accelerate.rs  accelerate_lane.rs  authority.rs  coreml.rs  coreml_lane.rs  cpu_attn.rs  flex_dispatch.rs  heterogeneous_executor.rs  intel_level_zero.rs  intel_usm.rs  mod.rs  placement.rs  residency.rs  routing.rs  unified_arena.rs
compute-native/compute-core/src/benchmark/: mod.rs  perf.rs
compute-native/compute-core/src/bridge/: coreml_arena.h  coreml_arena.mm
compute-native/compute-core/src/cache/: chunk_kv.rs  evolkv.rs  mod.rs  prefix_cache.rs
compute-native/compute-core/src/compiler/: compile_schedule.rs  graph_optimizer.rs  mod.rs  pipeline_tests.rs  scheduled.rs
compute-native/compute-core/src/compute_image/: compile.rs  compile_coreml.rs  compile_hw.rs  compile_tensix.rs  diag.rs  fusion_receipts.rs  fusion_tensix.rs  hf.rs  hw_assessment.rs  hw_bench_suite.rs  kernel_provider.rs  kv_plan.rs  layout_tensix.rs  manifest.rs  mod.rs  phase_dag.rs  phase_graph_builder.rs  phase_graph_validation.rs  pipeline.rs  plan.rs  quant.rs  segment.rs  source.rs  subgraph_mil.rs  tensix.rs  verify.rs
compute-native/compute-core/src/config/: operation_route.rs
compute-native/compute-core/src/decode_attribution/: breadcrumb.rs  mod.rs
compute-native/compute-core/src/generation/: audio_to_audio.rs  audio_to_text.rs  diffusiongemma.rs  image_to_image.rs  mod.rs  text_to_image.rs  text_to_speech.rs  video_generation.rs
compute-native/compute-core/src/inference/: inference_session_state.rs  inference_step_state.rs  phase_engine_adapter.rs
compute-native/compute-core/src/inference_profile/: mod.rs  tensix.rs
compute-native/compute-core/src/kv_arena/: backend.rs  block.rs  mod.rs  prefix.rs  refcount.rs
compute-native/compute-core/src/memory/: allocator.rs  compute_image_bridge.rs  mod.rs  plan.rs
compute-native/compute-core/src/model_adapter/: fixtures.rs  gemma.rs  llama.rs  mistral.rs  mod.rs  phi.rs  qwen2.rs  tests.rs
compute-native/compute-core/tests/: backend_conformance.rs  lane_conformance.rs
compute-native/models/gemma4-12b-8bit/: README.md  config.json
compute-native/src/: bridge  compute_image.rs  external_array.rs  lib.rs  mapped_image.rs
compute-native/src/backend/: mod.rs
compute-native/src_old/: lib_new_split.rs
compute-native/tensix-backend/: Cargo.toml
compute-native/tensix-backend/src/: lib.rs
compute-native/tensix-ffi/: Cargo.toml  build.rs
compute-native/tensix-ffi/cpp/: bridge.cpp  bridge.h
compute-native/tensix-ffi/src/: lib.rs
mlx-rs-lm/: Cargo.toml
models/funasr-qwen4b-mlx/: Cargo.toml  README.md
models/funasr-qwen4b-mlx/docs/: DEVPLAN.md  README.md  repetition-fix-devplan.md
models/funasr-qwen4b-mlx/examples/: benchmark_aishell.rs  benchmark_emilia.rs  test_adaptor_load.rs  test_full_pipeline.rs  test_integration.rs  test_multimodal.rs  test_qwen3_mlx.rs  test_real_audio.rs  test_sensevoice_load.rs  transcribe.rs  transcribe_translate.rs  verify_adaptor.rs
models/funasr-qwen4b-mlx/src/: adaptor.rs  audio.rs  error.rs  lib.rs  model.rs  qwen4b.rs  sensevoice_encoder.rs
models/minicpm-sala-mlx/: .gitignore  Cargo.toml  README.md
models/minicpm-sala-mlx/docs/: BLOG.md  feature-gap.md
models/minicpm-sala-mlx/examples/: batch_generate.rs  chat.rs  generate.rs  needle_test.rs  save_quantized.rs  server.rs  speculative_generate.rs  test_rope_batch.rs
models/minicpm-sala-mlx/scripts/: bench_compare.py
models/minicpm-sala-mlx/src/: config.rs  lib.rs  metal_kernels.rs  model.rs  speculative.rs
models/minicpm-sala-mlx/tests/: test_model.rs
models/moxin-vlm-mlx/: Cargo.toml  README.md
models/moxin-vlm-mlx/examples/: generate.rs
models/moxin-vlm-mlx/src/: error.rs  lib.rs  projector.rs  vision.rs
models/qwen-image-mlx/: Cargo.toml  README.md  codereview-kimi.md
models/qwen-image-mlx/docs/: CLEANUP_PLAN.md  METAL_FLASH_ATTENTION_INTEGRATION.md  MIXED_PRECISION_OPTIMIZATION.md  MLX_BEST_PRACTICES.md  MLX_OPTIMIZATION_TECHNIQUES_REPORT.md  OPTIMIZATION_FINDINGS.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_POTENTIAL.md  OPTIMIZATION_TECHNIQUES.md  SCHEDULER_FIX.md  STEP_REDUCTION_RESULTS.md
models/qwen-image-mlx/examples/: generate_fp32.rs  generate_full_precision.rs  generate_qwen_image.rs
models/qwen-image-mlx/src/: constants.rs  error.rs  lib.rs  pipeline.rs  qwen_full_precision.rs  qwen_quantized.rs  qwen_quantized_debug.rs  text_encoder.rs  weights.rs
models/qwen3-asr-mlx/: Cargo.toml  README.md
models/qwen3-asr-mlx/examples/: transcribe.rs
models/qwen3-asr-mlx/src/: audio.rs  encoder.rs  error.rs  lib.rs  model.rs  qwen.rs
models/qwen3-mlx/: Cargo.toml
models/qwen3-mlx/src/: model.rs  qwen2.rs  qwen3_moe.rs
models/qwen3-vl-mlx/: Cargo.toml
models/qwen3-vl-mlx/src/: error.rs  lib.rs
(+295 files in other folders)
