[package]
name = "tribunus-compute-native"
version = "0.1.0"
edition = "2021"
description = "Tribunus Compute Kernel — native MLX backend via napi-rs"
license = "AGPL-3.0-only"

[lib]
crate-type = ["cdylib"]

[dependencies]
tribunus-compute-core = { path = "compute-core" }
napi = { version = "3.9.0", features = ["napi8", "serde-json"], default-features = false }
napi-derive = "3.5.6"
mlx-rs = { workspace = true }
mlx-sys = { workspace = true }
safetensors = "0.5"
sha2 = { version = "0.10", features = ["asm"] }
uuid = { version = "1", features = ["v4", "serde"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
libc = "0.2"
lazy_static = "1.5"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }

[build-dependencies]
napi-build = "2.3.2"
cc = "1.2"

[features]
default = ["mlx-backend"]
private-development = []
stub-backend = []
mlx-backend = ["mlx-rs/metal", "mlx-rs/accelerate", "mlx-rs/safetensors"]
