[package]
name = "moxin-vlm-mlx"
version = "0.1.0"
edition = "2021"
description = "Moxin-7B VLM inference on Apple Silicon with MLX"
license = "MIT OR Apache-2.0"

[dependencies]
mlx-rs = { path = "../../mlx-rs-fork/mlx-rs", features = ["metal", "accelerate"] }
mlx-sys = { path = "../../mlx-rs-fork/mlx-sys" }
mlx-rs-core = { path = "../../mlx-rs-core" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.21"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
hf-hub = "0.4"
anyhow = "1"
image = "0.25"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"

[[example]]
name = "generate"
path = "examples/generate.rs"

[[example]]
name = "save_quantized"
path = "examples/save_quantized.rs"

[[example]]
name = "server"
path = "examples/server.rs"
