[package]
name = "qwen3-vl-mlx"
version = "0.1.0"
edition = "2021"
description = "Qwen3-VL vision-language model inference on Apple Silicon with MLX"
license = "MIT OR Apache-2.0"

[dependencies]
mlx-rs = { path = "../../mlx-rs-fork/mlx-rs", features = ["metal", "accelerate"] }
mlx-rs-core = { path = "../../mlx-rs-core" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = { version = "0.21", features = ["http"] }
image = "0.25"
